fixed the padding and added a break in the middle of the title screen

--- a/css/mainpstyle.css
+++ b/css/mainpstyle.css
@@ -30,7 +30,7 @@ li {
 }
 
 .container1 {
-    padding-top: 100px;
+    padding-top: 95px;
 }
 
 .container2 {
